--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,10 @@ body {
     border-bottom: 1px solid #E7E9FC;
     padding: 24px 0;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #FFFFFF;
 }
 
 .header-container {
@@ -124,8 +128,10 @@ body {
 }
 
 .header-item {
+    
 }
 .header-link {
+    position: relative;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -136,6 +142,18 @@ body {
 .header-link:hover,
 .header-link:focus {
     color: var(--pressed-color);
+}
+
+.header-link.current::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    left: 0;
+    top: calc(100% + 24px);
+    background-color: var(--pressed-color);
 }
 
 .header-adress {
@@ -167,6 +185,7 @@ body {
 
 .main {
     margin: 0 auto;
+    margin-top: 72px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-img.jpg);
     background-color: rgba(46, 47, 66, 0.7);
     background-repeat: no-repeat;
@@ -550,3 +569,70 @@ body {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+.portfolio-thumb {
+    position: relative;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    padding: 40px 32px;
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+}
+.overlay-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;    
+}
+
+/* Modals */
+
+.backdrop {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(23, 26, 36, 0.3);
+    backdrop-filter: blur(2px);
+}
+.modal {
+    position: absolute;
+    left: calc((100% - 408px) / 2);
+    top: 80px;
+    width: 408px;
+    height: 584px;
+    background: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+.modal-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+
+    width: 24px;
+    height: 24px;
+    
+    background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50px;
+
+    cursor: pointer;
+
+    padding: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.modal-close-icon {
+    fill: #2E2F42;
+}
