--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
     --second-color: #2E2F42;
     --paragraph-color: #434455;
     --pressed-color: #404BBF;
+    --header-idx: 10;
+    --modal-idx: 100;
 }
 
 img {
@@ -92,6 +94,7 @@ body {
     top: 0;
     width: 100%;
     background-color: #FFFFFF;
+    z-index: var(--header-idx);
 }
 
 .header-container {
@@ -137,11 +140,32 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--second-color);
+    transform: scale(1);
+    transition: color var(--hover-focus-trans);
+
 }
 
-.header-link:hover,
-.header-link:focus {
+.header-link:is(:hover, :focus) {
     color: var(--pressed-color);
+    
+}
+
+.header-link::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    left: 0;
+    top: calc(100% + 24px);
+    background-color: #FFFFFF;
+    transition: background-color var(--hover-focus-trans) ;
+}
+
+.header-link:is(:hover, :focus)::after {
+    background-color: var(--pressed-color);
+    
 }
 
 .header-link.current::after {
@@ -170,9 +194,7 @@ body {
     letter-spacing: 0.02em;
     text-decoration: none;
     color: var(--paragraph-color);
-}
-
-.header-tel {
+    transition: color var(--hover-focus-trans);
 }
 
 .header-contacts:hover,
@@ -180,6 +202,8 @@ body {
     color: var(--pressed-color);
 }
 
+.header-tel {
+}
 
 /* ----------- main ----------- */
 
@@ -219,14 +243,15 @@ body {
     letter-spacing: 0.04em;
     cursor: pointer;
     color: #FFFFFF;
-    background: #4D5AE5;
+    background-color: #4D5AE5;
     display: block;
     margin: 0 auto; 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     padding: 16px 32px;
     margin-top: 48px;
-    border: none
+    border: none;
+    transition: background-color var(--hover-focus-trans), box-shadow var(--hover-focus-trans);
 }
 .main-btn:hover,
 .main-btn:focus {
@@ -360,6 +385,7 @@ body {
     height: 100%;
     border-radius: 50%;
     background-color: #4D5AE5;
+    transition: background-color var(--hover-focus-trans);
 }
 
 .team-social-icon {
@@ -404,6 +430,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100%;
+    transition: border-color var(--hover-focus-trans), color var(--hover-focus-trans);
 }
 
 .customers-icon {
@@ -480,6 +507,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color var(--hover-focus-trans);
 }
 
 .footer-social-link:is(:focus, :hover) {
@@ -532,10 +560,11 @@ body {
 .portfolio-link {
     background: #FFFFFF;
     display: block;
+    transition: box-shadow var(--hover-focus-trans);
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
+.portfolio-link:is(:focus, :hover) {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-subtitle{
@@ -556,6 +585,9 @@ body {
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     padding: 12px 24px;
+    transition: color var(--hover-focus-trans), background-color var(--hover-focus-trans), border var(--hover-focus-trans), box-shadow var(--hover-focus-trans);
+    
+
 }
 
 .portfolio-btn:is(:hover, :focus) {
@@ -565,12 +597,10 @@ body {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-link:is(:focus, :hover) {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
 .portfolio-thumb {
     position: relative;
+    z-index: 1;
+    overflow: hidden;
 }
 .overlay {
     position: absolute;
@@ -581,6 +611,13 @@ body {
     width: 100%;
     height: 100%;
     background-color: #4D5AE5;
+
+    transform: translateY(100%);
+    transition: transform var(--hover-focus-trans);
+}
+
+.portfolio-images-item:is(:hover, :focus) .overlay{
+    transform: translateY(0%);
 }
 .overlay-text {
     font-family: 'Roboto';
@@ -594,8 +631,11 @@ body {
 
 /* Modals */
 
+.is-hidden {
+    
+}
+
 .backdrop {
-    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -603,16 +643,26 @@ body {
     height: 100%;
     background-color: rgba(23, 26, 36, 0.3);
     backdrop-filter: blur(2px);
+    z-index: var(--modal-idx);
+    transition: opacity var(--hover-focus-trans), visibility var(--hover-focus-trans);
 }
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
 .modal {
     position: absolute;
-    left: calc((100% - 408px) / 2);
-    top: 80px;
+    left: 50%;
+    top: 50%;
     width: 408px;
     height: 584px;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    transform: translate(-50%, -50%);
 }
 .modal-close-btn {
     position: absolute;
@@ -622,17 +672,23 @@ body {
     width: 24px;
     height: 24px;
     
+    fill: #000000;
     background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50px;
 
     cursor: pointer;
 
-    padding: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
+
+.modal-close-btn:is(:hover, :focus) {
+    background-color: var(--pressed-color);
+    fill: #FFFFFF;;
+}
+
 .modal-close-icon {
-    fill: #2E2F42;
 }
