--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --second-color: #2E2F42;
     --paragraph-color: #434455;
     --pressed-color: #404BBF;
+    --hover-focus-trans: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     --header-idx: 10;
     --modal-idx: 100;
 }
