--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--pressed-color);
+    color: var(--second-color);
     transform: scale(1);
     transition: color var(--hover-focus-trans);
 
@@ -523,6 +523,7 @@ body {
 /* Portfolio Page Styles */
 
 .Portfolio {
+    margin-top: 72px;
     padding: 96px 0 120px;
 }
 
