--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,7 @@ body {
 }
 
 .header-item {
+    color: var(--second-color);
     
 }
 .header-link {
@@ -140,7 +141,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--second-color);
+    color: currentColor;
     transform: scale(1);
     transition: color var(--hover-focus-trans);
 
@@ -665,7 +666,7 @@ body {
     left: 50%;
     top: 50%;
     width: 408px;
-    height: 584px;
+    min-height: 584px;
     min-height: 576px;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
