--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ body {
     overflow: hidden;
   }
   .current:visited {
-    color: #404BBF;
+    color: #404bbf;
   }
 
   /* ----------- header ----------- */
@@ -667,7 +667,6 @@ body {
     top: 50%;
     width: 408px;
     min-height: 584px;
-    min-height: 576px;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
