--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: currentColor;
+    color: #2E2F42;
     transform: scale(1);
     transition: color var(--hover-focus-trans);
 
