--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--pressed-color);
+    color: var(--second-color);
     transform: scale(1);
     transition: color var(--hover-focus-trans);
 
@@ -168,7 +168,11 @@ body {
 
 .header-link:is(:hover, :focus)::after {
     background-color: var(--pressed-color);
-    
+
+}
+
+.header-link.current {
+    color: var(--pressed-color);
 }
 
 .header-link.current::after {
